[package]
name = "dqnq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
uuid = { version = "1.8.0", features = ["v4"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["time", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
